# steal_stickers_bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml.example  docker-compose.yaml  justfile
configs/: config.toml.example
src/: application.rs  bot_commands.rs  config.rs  core.rs  entities.rs  handlers.rs  main.rs  middlewares.rs  states.rs  telegram_app.rs  telegram_application.rs
src/application/: commands.rs
src/application/commands/: create_set.rs  create_user.rs  set_deleted_col.rs
src/application/common/: exceptions.rs  traits.rs
src/application/common/traits/: uow.rs
src/application/set/: dto.rs  exceptions.rs  traits.rs
src/application/set/dto/: create.rs  delete_by_short_name.rs  get_by_short_name.rs  get_by_tg_id.rs  set_deleted_col_by_short_name.rs
src/application/user/: dto.rs  exceptions.rs  traits.rs
src/application/user/dto/: create.rs  update_sets_number.rs
src/bot_commands/: commands.rs  handlers.rs  states.rs
src/bot_commands/handlers/: add_stickers.rs  cancel.rs  common.rs  my_stickers.rs  process_non_sticker.rs  source.rs  start.rs  steal_sticker_set.rs
src/bot_commands/states/: add_stickers.rs  my_stickers.rs
src/core/: stickers.rs
src/core/stickers/: common.rs  constants.rs  helpers.rs  texts.rs
src/database/repositories/: user.rs
src/domain/entities/: set.rs  user.rs
src/entities/: set.rs
src/handlers/: add_sticker.rs  add_stickers.rs  cancel.rs  source.rs  start.rs  steal_sticker_set.rs
src/infrastructure/: database.rs
src/infrastructure/database/: models.rs  repositories.rs  uow.rs
src/infrastructure/database/migrations/: 20240911212425_create-tables.sql
src/infrastructure/database/models/: set.rs  user.rs
src/middlewares/: client_application.rs  create_user.rs  database.rs  deleted_sets.rs
src/states/: add_sticker_state.rs  my_stickers.rs  steal_sticker_set_state.rs
src/telegram_app/: constants.rs
src/telegram_application/: constants.rs  errors.rs
(+2 files in other folders)
