[package]
name = "steal_stickers_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
telers = { git = "https://github.com/Desiders/telers", rev = "9a44d10", features = ["memory-storage"]}
tokio = { version = "1.36", features = ["macros"]}
serde_json = "1.0"

random-string = "1.1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 