[package]
name = "steal_stickers_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
telers = {version = "1.0.0-alpha", features = ["memory-storage"]}
tokio = { version = "1.36", features = ["macros"]}

grammers-client = "0.6.0"
grammers-tl-types = "0.6.0"
grammers-session = "0.5.2"

serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
random-string = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 
toml = "0.8"
thiserror = "1"
async-trait = "0.1"
clap = { version = "4.5.16", features = ["derive"] }
