[package]
name = "steal_stickers_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# main crates
telers = {version = "1.0.0-alpha", features = ["memory-storage"]}
tokio = { version = "1.36", features = ["macros"]}

sea-query = "0.31"
sea-query-binder = { version = "0.6.0", features = ["sqlx-postgres"] }
sqlx = { version = "0.7", features = [
    "postgres",
    "time",
    "runtime-tokio"
] }

# on crates.io old version
grammers-client = { git = "https://github.com/Lonami/grammers" }
grammers-tl-types = { git = "https://github.com/Lonami/grammers" }
grammers-session = { git = "https://github.com/Lonami/grammers" }

serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
random-string = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 
toml = "0.8"
thiserror = "1"
async-trait = "0.1"
clap = { version = "4.5.16", features = ["derive"] }
chrono = "0.4"